# geokapti_microservices

./: README.md  docker-compose.yaml  pyproject.toml
distance_service/: Dockerfile  app.py  start.sh
distance_service/test/: test_distance_app.py
location_service/: Dockerfile  app.py  start.sh
location_service/test/: test_location_app.py
