[tool.poetry]
name = "project-geokapti"
version = "0.1.0"
description = "Microservice to calculate the distance of delivery routes"
authors = ["Estebanfonseca <estebanfonsecadev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
redis = "^5.2.0"
structlog = "^24.4.0"
pika = "^1.3.2"
flask-smorest = "^0.45.0"
apispec = "^6.7.1"
marshmallow = "^3.23.1"
flask-swagger-ui = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3"

[tool.pytest.ini_options]
testpaths = ["test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
